Fixed Alignment

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -69,7 +69,7 @@
   .featured-container img {
     margin-bottom: 1.25em;
     margin-top: 1.25em;
-    margin-right: 1.25em;
+    margin-right: 2em;s
   }
 }
 
